# pose-estimation-6d

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
docs/: BUILDING.md  USAGE.md
include/pose_estimation_6d/core_pose_estimation/: alignment.h  csv_parser.h  descriptor.h  pose_estimation.h  segmentation.h  utils.h
include/pose_estimation_6d/ros_pose_estimation/: ros_pose_estimation.h
launch/: kalman_filter.launch  pose_estimation.launch
rviz/: pose_estimation_6d.rviz
scripts/: kalman_filter.py  plotter.py  ros_kalman_filter.py
src/core_pose_estimation/: alignment.cpp  csv_parser.cpp  descriptor.cpp  pose_estimation.cpp  segmentation.cpp  utils.cpp
src/ros_pose_estimation/: main.cpp  ros_pose_estimation.cpp
srv/: InitializeState.srv  UpdateKalmanFilterAndPredict.srv
